frontend/core/src/main/webapp/static/less/widgets.less
@import "foundation.less";
@import "typography.less";
@import "inputs.less";
@import "layout.less";

/*
<h1 class="main-heading">Widgets</h1>

Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidemenu and omnibar.
*/

/*
*************************************************************
# Datepicker
*/

.datepicker-day {
  height: 88px;
  line-height: 88px;
  text-align: center;
  display:table;
}

.datepicker-day > div {
  width: 100%;
  height: 88px;
  line-height: 88px;
  display:table-cell;
  vertical-align: middle;
}
.datepicker-day > div > * {
  display: block;
  line-height: normal;
}

.datepicker-day > div >:first-child {
  padding-bottom: 4px;
}
.datepicker-day > div >:last-child {
  font-size: @size-font-medium;
}

.datepicker-active-day {
  .set-font-bold();
}

/*
*************************************************************
# Editor footer
*/

// 1. Set white background to hide stuff below.
.editor-footer {
  background-color: white; // TODO: muuttujaksi, siirrä layout.lessiin
}

/*
*************************************************************
# Later
*/

// 1. Use simple table grid layout in later.
.later {
  display: table; // [1]
  width: 100%;
}

.later-row {
  display: table-row;
  height: @grid-vertical;
}

// 1. Each later item has half the width
.later-row--left, .later-row--right {
  display: table-cell;
  vertical-align: middle;
  width: 50%; // [1]
  text-align: center;
  padding-left: 5px;
  padding-right: 5px;
}

/*
*************************************************************
# Swiper
see: http://www.idangero.us/sliders/swiper/

TODO: Do we want an example of a swiper in the styleguide?
*/

// TODO: Explanations.
.swiper-container {
  overflow: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  -o-backface-visibility: hidden;
  backface-visibility: hidden;
}

// 1. Prevent slide flicker during transforms & transitions. See http://stackoverflow.com/a/4674791
// 2. https://github.com/nolimits4web/Swiper/issues/310
//    https://github.com/nolimits4web/Swiper/issues/855
.swiper-wrapper {
  -webkit-transition-timing-function: ease-out;
  -moz-transition-timing-function: ease-out;
  -ms-transition-timing-function: ease-out;
  -o-transition-timing-function: ease-out;
  transition-timing-function: ease-out;

  -webkit-transition-property: -webkit-transform; // [1]
  -o-transition-property: -o-transform;           // [1]
  -ms-transition-property: -ms-transform;         // [1]
  transition-property: transform;                 // [1]
  box-sizing: content-box;  // [2]
}

// 1. Relative position is needed to center children horizontally.
// 2. https://github.com/nolimits4web/Swiper/issues/310
//    https://github.com/nolimits4web/Swiper/issues/855
.swiper-slide {
  position: relative; // [1]
  float: left;
  box-sizing: content-box;  // [2]
}

// 1. IE10 Windows Phone 8 Fixes
.swiper-wp8-horizontal {
  -ms-touch-action: pan-y;  // [1]
}
// 1. IE10 Windows Phone 8 Fixes
.swiper-wp8-vertical {
  -ms-touch-action: pan-x;  // [1]
}


/*
Backdrop for editable field

TODO: working example needed!

```markup
<div class="editable-field-backdrop" style="height: 100px">
  <div class="inner-page-content-container" style="width=50%;height=50%;">I'm mr. lightbox</div>
</div>
```
*/

.editable-field-backdrop.active {
  * {
    pointer-events: none;
  }
}

.editable-field-container.active {
  * {
    pointer-events: auto !important;
  }
}

/*
*************************************************************
# Pick a day
TODO: Example needed
*/

// 1. Override style from normalize.less
// 2. Override th's inherited font-weight
.pika-table abbr[title] {
  border-bottom: none;  // [1]
  font-weight: normal;  // [2]
  font-size: @size-font-small;
  color: @color-text-downplayed;
}

// 1. Float clear button to the right of .pika-title which is rendered by Pikaday.js.
// TODO: align with .pika-title
.pikaday-clear {
  float: right; // [1]
}

// 1. Make room for .pikaday-clear.
//    NOTE: Make sure that layout does not break if setting width smaller than 60%.
// TODO: align with .pika-clear
.pika-title {
  width: 60%; // [1]
  .center-horizontally;
  text-align: center;
}

.pika-label {
  display: inline-block;
  position: relative;
}

// 1. Make some room between month and year labels.
.pika-label:first-child {
  padding-right: 5px; // [1]
}
// 1. Make some room between month and year labels.
.pika-label:last-child {
  padding-left: 5px;  // [1]
}

// 1. Unmodified from Pikaday.css
.pika-title select {
  position: absolute; // [1]
  margin: 0;          // [1]
  left: 0;            // [1]
  opacity: 0;         // [1]
}

.pika-next:after {
  .set-icon-font;
  content: @icon-arrow-right;
  font-size: 8px;
  padding-left: 5px;
}
.pika-prev:before {
  .set-icon-font;
  content: @icon-arrow-left;
  font-size: 8px;
  padding-right: 5px;
}

// 1. Remove borders.
// 2. Remove background.
.pika-prev,
.pika-next {
  border: 0;  // [1]
  background-color: transparent;  // [2]
}

.pika-prev,
.is-rtl .pika-next {
  float: left;
}

.pika-next,
.is-rtl .pika-prev {
  float: right;
}

// 1. Utilize whole available width.
.pika-table {
  width: 100%;  // [1]
}

// 1. Set width for table header and data cells: 100% / 7.
.pika-table th,
.pika-table td {
  width: 14.285714285714286%; // [1]
}

// 1. Remove borders.
// 2. Remove outline.
// 3. Add some padding value to make calendar obey window width.
// 4. Explicitly set box-sizing if Pikaday is used in some environment that sets box-sizing to something
//    other than border-box.
//    See. https://github.com/dbushell/Pikaday/commit/ee4d064769e66315dcb2fe33783588c6feb14cd0

// TODO: add height to button
.pika-button {
  border: 0;      // [1]
  outline: none;  // [2]
  padding: 0;     // [3]
  width: 100%;
  font-size: @size-font-small;
  background-color: white;
  // box-sizing: border-box; // [4]
}

// 1. Highlight today with border.

// TODO: add border-radius when correct height (and dimensions) is set.
.is-today .pika-button {
  border: 1px solid black;  // [1]
}

// 1. Highlight hovered date with bold font.
.web .pika-button:hover {
  .set-font-bold; // [1]
}


// #############################
// from Bootstrap variables.less

@zindex-modal-background: 1040;
@zindex-modal: 1050;
//** Padding applied to the modal body
@modal-inner-padding: 15px;
//** Padding applied to the modal title
@modal-title-padding: 15px;
//** Modal title line-height
@modal-title-line-height: @grid-vertical-half;
//** Background color of modal content area
@modal-content-bg: #fff;
//** Modal content border color
@modal-content-border-color: rgba(0,0,0,.2);
//** Modal content border color **for IE8**
@modal-content-fallback-border-color: #999;
//** Modal backdrop background color
@modal-backdrop-bg: #000;
//** Modal backdrop opacity
@modal-backdrop-opacity: .5;
//** Modal header border color
@modal-header-border-color: #e5e5e5;
//** Modal footer border color
@modal-footer-border-color: @modal-header-border-color;
@modal-lg: 900px;
@modal-md: 600px;
@modal-sm: 300px;

// Small screen / tablet
// Note: Deprecated @screen-sm and @screen-tablet as of v3.0.1
@screen-sm: 768px;
@screen-sm-min: @screen-sm;
@screen-tablet: @screen-sm-min;

// Medium screen / desktop
// Note: Deprecated @screen-md and @screen-desktop as of v3.0.1
@screen-md: 992px;
@screen-md-min: @screen-md;
@screen-desktop: @screen-md-min;

// Large screen / wide desktop
// Note: Deprecated @screen-lg and @screen-lg-desktop as of v3.0.1
@screen-lg: 1200px;
@screen-lg-min: @screen-lg;
@screen-lg-desktop: @screen-lg-min;


// #################
// from Bootstrap mixins.less
.translate(@x; @y) {
  -webkit-transform: translate(@x, @y);
      -ms-transform: translate(@x, @y); // IE9 only
      transform: translate(@x, @y);
    }
    .transition-transform(@transition) {
      -webkit-transition: -webkit-transform @transition;
      -moz-transition: -moz-transform @transition;
      -o-transition: -o-transform @transition;
      transition: transform @transition;
    }


/*
*************************************************************
# Drop shadows
TODO: Do we need an example?
*/

//
// Note: Deprecated `.box-shadow()` as of v3.1.0 since all of Bootstrap's
//   supported browsers that have box shadow capabilities now support the
//   standard `box-shadow` property.
.box-shadow(@shadow) {
  -webkit-box-shadow: @shadow; // iOS <4.3 & Android <4.1
  box-shadow: @shadow;
}

// Opacity
.opacity(@opacity) {
  opacity: @opacity;
  // IE8 filter
  @opacity-ie: (@opacity * 100);
  filter: ~"alpha(opacity=@{opacity-ie})";
}


/*
*************************************************************
# Modals
TODO: Gets wiped?
*/

// .modal-open      - body class for killing the scroll
// .modal           - container to scroll within
// .modal-dialog    - positioning shell for the actual modal
// .modal-content   - actual modal w/ bg and corners and shit

// Kill the scroll on the body
.modal-open {
  overflow: hidden;
}

// Container that the modal scrolls within
.modal {
  display: none;
  overflow: auto;
  overflow-y: scroll;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: @zindex-modal;
  -webkit-overflow-scrolling: touch;

  // Prevent Chrome on Windows from adding a focus outline. For details, see
  // https://github.com/twbs/bootstrap/pull/10951.
  outline: 0;

  // When fading in the modal, animate it to slide down
  &.fade .modal-dialog {
    .translate(0, -25%);
    .transition-transform(~"0.3s ease-out");
  }
  &.in .modal-dialog { .translate(0, 0)}
}

// Shell div to position the modal with bottom padding
.modal-dialog {
  position: relative;
  width: auto;
  margin: 10px;
}

// Actual modal
.modal-content {
  position: relative;
  background-color: @modal-content-bg;
  border: 1px solid @modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
  border: 1px solid @modal-content-border-color;
  .box-shadow(0 3px 9px rgba(0, 0, 0, .5));
  background-clip: padding-box;
  // Remove focus outline from opened modal
  outline: none;
}

// Modal background
.modal-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: @zindex-modal-background;
  background-color: @modal-backdrop-bg;
  // Fade for backdrop
  &.fade { .opacity(0); }
  &.in { .opacity(@modal-backdrop-opacity); }
}

// Modal header
// Top section of the modal w/ title and dismiss
.modal-header {
  padding: @modal-title-padding;
  border-bottom: 1px solid @modal-header-border-color;
  min-height: (@modal-title-padding + @modal-title-line-height);
}
// Close icon
.modal-header .close {
  margin-top: -2px;
}

// Title text within header
.modal-title {
  margin: 0;
  line-height: @modal-title-line-height;
}

// Modal body
// Where all modal content resides (sibling of .modal-header and .modal-footer)
.modal-body {
  position: relative;
  padding: @modal-inner-padding;
}

// Footer (for actions)
.modal-footer {
  padding: @modal-inner-padding;
  text-align: right; // right align buttons
  &:extend(.clearfix all); // clear it in case folks use .pull-* classes on buttons

  // Properly space out buttons
  .btn + .btn {
    margin-left: 5px;
    margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
  }
  // but override that for button groups
  .btn-group .btn + .btn {
    margin-left: -1px;
  }
  // and override it for block buttons as well
  .btn-block + .btn-block {
    margin-left: 0;
  }
}

// Scale up the modal
@media (min-width: @screen-sm-min) {
  // Automatically set modal's width for larger viewports
  .modal-dialog {
    width: @modal-md;
    margin: 30px auto;
  }
  .modal-content {
    .box-shadow(0 5px 15px rgba(0, 0, 0, .5));
  }

  // Modal sizes
  .modal-sm { width: @modal-sm; }
}

@media (min-width: @screen-md-min) {
  .modal-lg { width: @modal-lg; }
}

